--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav mat-tab-nav-bar >
-  <a mat-tab-link routerLink="/clientes"> Clientes </a>
-  <a mat-tab-link routerLink="/fornecedores"> Fornecedores </a>
+  <a class="link" mat-tab-link routerLink="/clientes"> Clientes </a>
+  <a class="link" mat-tab-link routerLink="/fornecedores"> Fornecedores </a>
 </nav>
 
 <router-outlet></router-outlet>
