--- a/projects/fornecedores/src/lib/componentes/fornecedores.component.html
+++ b/projects/fornecedores/src/lib/componentes/fornecedores.component.html
@@ -14,7 +14,9 @@
         </thead>
         <tbody class="mdc-data-table__content">
           <tr class="mdc-data-table__row" *ngFor="let fornecedor of fornecedores">
-            <input class="" type="button" value="x" (click)="apagaFornecedor(fornecedor)">
+              <button mat-fab color="secundary" (click)="chamarDialogo(fornecedor)">
+                <mat-icon>delete</mat-icon>
+              </button>
             <td class="mdc-data-table__cell">{{fornecedor.id}}</td>
             <td class="mdc-data-table__cell">{{fornecedor.cargo}}</td>
             <td class="mdc-data-table__cell">{{fornecedor.nome}}</td>
