--- a/projects/clientes/src/lib/componentes/clientes.component.html
+++ b/projects/clientes/src/lib/componentes/clientes.component.html
@@ -14,7 +14,9 @@
         </thead>
         <tbody class="mdc-data-table__content">
           <tr class="mdc-data-table__row" *ngFor="let client of clientes">
-            <input class="" type="button" value='x' (click)="chamarDialogo(client)">
+            <button mat-fab color="secundary" (click)="chamarDialogo(client)">
+              <mat-icon>delete</mat-icon>
+            </button>
             <td class="mdc-data-table__cell">{{client.id}}</td>
             <td class="mdc-data-table__cell">{{client.cargo}}</td>
             <td class="mdc-data-table__cell">{{client.nome}}</td>
