--- a/projects/shared/src/lib/dialogo/dialogo.component.html
+++ b/projects/shared/src/lib/dialogo/dialogo.component.html
@@ -1,10 +1,10 @@
 <mat-dialog-content class="mat-typography">
     <p>
-        {{messagem}}
+        {{menssagem}}
     </p>
 </mat-dialog-content>
 <mat-dialog-actions >
-  <button mat-button mat-dialog-close>Cancelar</button>
-  <button mat-button color="primary" (click)="comfirmarClick()" cdkFocusInitial>Confirmar</button>
+  <button mat-raised-button mat-dialog-close>Cancelar</button>
+  <button mat-raised-button color="primary" (click)="comfirmarClick()" cdkFocusInitial>Confirmar</button>
 </mat-dialog-actions>
 
