--- a/projects/clientes/src/lib/componentes/clientes.component.html
+++ b/projects/clientes/src/lib/componentes/clientes.component.html
@@ -14,9 +14,11 @@
         </thead>
         <tbody class="mdc-data-table__content">
           <tr class="mdc-data-table__row" *ngFor="let client of clientes">
-            <button mat-fab color="secundary" (click)="chamarDialogo(client)">
-              <mat-icon>delete</mat-icon>
-            </button>
+            <td class="mdc-data-table__cell">
+              <button mat-mini-fab color="black" (click)="chamarDialogo(client)">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
             <td class="mdc-data-table__cell">{{client.id}}</td>
             <td class="mdc-data-table__cell">{{client.cargo}}</td>
             <td class="mdc-data-table__cell">{{client.nome}}</td>
